# VectorDB_DATN

./: .gitignore  docker-compose.yml  example.env  functions.py  package-lock.json
frontend/: index.html  package-lock.json  package.json
frontend-v2/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend-v2/src/: App.css  App.tsx  main.tsx
frontend-v2/src/components/auth/: Auth0Guard.jsx
frontend-v2/src/components/common/: LWButton.tsx  LWCarousel.tsx  LWTitle.tsx  (+6 more)
frontend-v2/src/hooks/: useCustomMediaQuery.ts  useDebounce.ts  useFavoriteCourseMutation.ts  useListFavoriteCourse.ts  useListLearningCourse.ts
frontend-v2/src/layouts/: exploreMenu.tsx  main.tsx  navBar.tsx  nestedMenu.tsx
frontend-v2/src/redux/: store.ts
frontend-v2/src/routers/: router.tsx
frontend-v2/src/types/: commonComponent.ts  index.ts  learningPath.ts  template.ts
frontend-v2/src/utils/: common.tsx  theme.ts
frontend-v2/src/views/: notFound.tsx
frontend/src/: App.css  App.tsx
frontend/src/components/: AlertStatus.tsx  CustomChip.tsx  Footer.tsx  Header.tsx  Import.tsx  InProgress.tsx  NavBar.tsx
frontend/src/pages/: AdminPage.tsx  ChatBotPage.tsx
frontend/src/routers/: router.tsx
frontend/src/utils/: api.ts
server/: Dockerfile  pyproject.toml
server/src/: functions.py  main.py
server/src/database/mongodb/: repository.py
server/src/service/: controller.py  courses.csv  repository.py
server/src/service/core/: embedding_csv.py  embedding_docx.py  embedding_func.py  functions.py
server/src/utils/: dto.py
(+86 files in other folders)
