[tool.poetry]
name = "vector-db-server"
version = "0.1.0"
description = ""
authors = ["Phạm Tân Tị <kurokid0206@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
haystack-ai = "^2.1.1"
qdrant-haystack = "^3.5.0"
sentence-transformers = ">=2.2.0"
python-docx = "^1.1.2"
pypdf = "^4.2.0"
openpyxl = "^3.1.3"
python-multipart = "^0.0.9"
pymongo = "^4.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
